# EDGE-AI-FaceRecog

./: .gitignore  Kế hoạch thực hiện đồ án.xlsx  README.md  bao_cao_nhan_dien_khuon_mat.md
Báo cáo tuần/: 23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 1.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 10.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 2.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 3.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 4.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 5.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 6.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 7.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 8.docx  23730156-23730071-Trần Văn Chót-Dương Thị Quỳnh Châm-Báo cáo tuần 9.docx
Mẫu/: MSSV1-MSSV2-TênSV1-TênSV2-Báo cáo tuần x.docx
Picture/: IMG_2815.HEIC  IMG_2817.HEIC  IMG_2820.HEIC  IMG_2821.HEIC
Source/: Plan.md
Source/FaceRecognitionS3/main/: CMakeLists.txt  Kconfig.projbuild  app_button.cpp  app_button.h  app_camera.cpp  app_camera.h  app_console.cpp  app_console.h  app_discovery.cpp  app_discovery.h  app_espnow.cpp  app_espnow.h  app_face.cpp  app_face.h  app_graphics.cpp  app_graphics.h  app_lcd.cpp  app_lcd.h  app_ota.cpp  app_ota.h  app_storage.cpp  app_storage.h  app_web.cpp  app_web.h  idf_component.yml  main.cpp
Source/FaceRecognitionS3/main/models/: mobilenetv2_128d_v3.espdl
(+17 files in other folders)
